# Tareas_EDA

./: .gitignore  README.md
binary_tree/: CMakeLists.txt  binary_tree.h  cache.h  main.cpp
binary_tree/src/: avl_tree.h  avltree.h  binary_tree.h  cache.h  gen.cpp  main.cpp
dama_octal/: CMakeLists.txt  dama_octal.txt
dama_octal/source/: DrawCube.cpp
hilbert_curve/source/: hilbert_turtle.py  main.cpp
k_means/: generador.py  graficador.py
k_means/data/: puntos_100_bloques.txt  puntos_10_bloques.txt  puntos_20_bloques.txt  puntos_2_bloques.txt  puntos_50_bloques.txt  puntos_5_bloques.txt
k_means/source/: k_means.h  main.cpp  openmp_example.cpp  puntos.txt
pca/: CMakeLists.txt  main.cpp  pca_example.py
pca/src/: draw.py  main.cpp
pokemon_3d/: CMakeLists.txt
pokemon_3d/source/: DrawImage.cpp  DrawRegion.cpp  rtree.h
